# soft-cloud-update

./: LICENSE  README.md  bun.lockb  config.json  index.html  package-lock.json  package.json  vite.config.js
backend/: README.md  bun.lockb  package.json  server.js
backend/_go/: go.mod  main.go
backend/_node/modules/: math.js  utils.js
backend/_node/router/: router.js
backend/_py/: README.md  pyproject.toml
backend/_py/src/py/: __init__.py  __main__.py
backend/database/: db.js
backend/database/local/: ohhh.js
backend/database/remote/: redis.js  sqllite.js
backend/modules/: crypto.js
fontend/src/: env.d.ts
fontend/src/api/: index.ts
fontend/src/components/: MenuTree.vue
fontend/src/router/: index.ts
fontend/src/utils/: color_log.ts  storage.ts
fontend/src/views/: ApiPage.vue  Base.vue  Login.vue  Welcome.vue
frontend/: .env  .env.production  .gitignore  bun.lockb  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/components/: BreadCrumb.vue  DemoCard.vue  MenuTree.vue
frontend/src/config/: index.ts
frontend/src/models/: env.ts  status.ts  types.ts
frontend/src/router/: index.ts
frontend/src/utils/: log4j.ts  request.ts  util.ts
frontend/src/views/: ApiPage.vue  Base.vue  (+3 more)
src/: App.vue  main.js
src/components/: About.vue  Base.vue  Card.vue  Home.vue  Login.vue
src/config/: index.js
src/router/: index.js
src/utils/: color_log.js  request.js  storage.js
src/views/: About.vue  ApiPage.vue  Base.vue  Home.vue  Welcome.vue
(+30 files in other folders)
