[project]
name = "py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Fromsko", email = "99723642+Fromsko@users.noreply.github.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "aiohttp>=3.10.9",
    "aiomysql>=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"py" = "py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py"]

[[tool.rye.sources]]
name="default"
url="https://mirrors.aliyun.com/pypi/simple/"
